--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ select {
     width: 100%;
     max-width: 320px;
     padding: 12px 16px;
+    margin-bottom: 30px;
     font-size: 18px;
     border-radius: 10px;
     border: none;
